fixes for <Flex />: 1. ...otherProps 2. new prop for gap: xxl

--- a/src/styles/standards/indents/_gaps.scss
+++ b/src/styles/standards/indents/_gaps.scss
@@ -5,4 +5,5 @@
     --uikit-gap-m: 16px;
     --uikit-gap-l: 32px;
     --uikit-gap-xl: 64px;
+    --uikit-gap-xxl: 128px;
 }
