--- a/src/ui/components/shared/Stack/Flex/Flex.module.scss
+++ b/src/ui/components/shared/Stack/Flex/Flex.module.scss
@@ -70,6 +70,10 @@
     gap: var(--uikit-gap-xl);
 }
 
+.gap_xxl {
+    gap: var(--uikit-gap-xxl);
+}
+
 .max {
     width: 100%;
 }
